# pixi-project-md

./: README.md  mkdocs.yaml  pi.json  pixi.toml  pyproject.toml
.github/workflows/: updates.yaml
config/: .pypackage-builder-answers.yml  coverage.toml  hatch.toml  mypy.ini  pytest.ini  releaserc.toml  ruff.toml
src/pixi_project_markdown/: __init__.py  __main__.py  main.py
src/pixi_project_markdown/models/: __init__.py  info.py  task.py
tests/: test_say_hello.py
