#--------------------------------------------------------------------------------------------------#
######################################### Package Config ###########################################
#__________________________________________________________________________________________________#
[project]
name = "pixi_project_markdown"
version = "0.1.0"
description = "TODO:: Add a short description of pixi_project_markdown here."
license = "MIT"

readme = "README.md"
keywords = ["pixi-project-md", "pixi", "python"]

authors = [{ name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com" }]
maintainers = [{ name = "Jermiah Joseph", email = "jermiahjoseph98@gmail.com" }]

classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

requires-python = ">= 3.10"
dependencies = [
  "rich",
]

[project.urls]
homepage = "https://github.com/jjjermiah/pixi-project-md"
repository = "https://github.com/jjjermiah/pixi-project-md"
documentation = "https://jjjermiah.github.io/pixi-project-md/"
changelog = "https://github.com/jjjermiah/pixi-project-md/blob/main/docs/CHANGELOG.md"
issues = "https://github.com/jjjermiah/pixi-project-md/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
myscript = "pixi_project_markdown.main:main"
